# OTUS_12

./: CMakeLists.txt  README.md
.github/workflows/: release_ubuntu.yml
msvc/: OTUS_12.sln  homework_12.vcxproj  homework_12.vcxproj.filters
src/: main.cpp  mapreduce.cpp  mapreduce.h  utils.cpp  utils.h
